--- a/psychological_test_app/app/src/main/res/layout/fragment_question.xml
+++ b/psychological_test_app/app/src/main/res/layout/fragment_question.xml
@@ -11,13 +11,14 @@
         android:id="@+id/tv_result_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="28dp"
+        android:fontFamily="monospace"
         android:gravity="center"
-        android:fontFamily="sans-serif-black"
         android:text="@string/question_text"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
