--- a/psychological_test_app/app/src/main/res/navigation/nav_graph.xml
+++ b/psychological_test_app/app/src/main/res/navigation/nav_graph.xml
@@ -13,10 +13,10 @@
         <action
             android:id="@+id/action_fragment_main_to_fragment_question"
             app:destination="@id/fragment_question"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim"
-            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+            app:enterAnim="@android:anim/slide_in_left"
+            app:exitAnim="@android:anim/slide_out_right"
+            app:popEnterAnim="@android:anim/fade_in"
+            app:popExitAnim="@android:anim/fade_out" />
     </fragment>
     <fragment
         android:id="@+id/fragment_question"
