--- a/mini_project/BodyCalendar/app/src/main/res/layout/activity_main.xml
+++ b/mini_project/BodyCalendar/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,11 @@
     tools:context=".ui.view.MainActivity"
     android:background="@color/white">
 
-    <ListView
-        android:id="@+id/listView_main"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView_main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        tools:listitem="@layout/item_my_list_view"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floating_btn_calendar"
