--- a/mini_project/InstagramClone/app/src/main/res/values/themes.xml
+++ b/mini_project/InstagramClone/app/src/main/res/values/themes.xml
@@ -1,9 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.BodyCalendar" parent="Theme.AppCompat.Light">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="windowNoTitle">true</item>
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/colorLightGray</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
