--- a/App_intermediate/QuoteApp/app/src/main/res/layout/item_quote.xml
+++ b/App_intermediate/QuoteApp/app/src/main/res/layout/item_quote.xml
@@ -9,19 +9,28 @@
         android:id="@+id/tvQuote"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="40dp"
+        android:ellipsize="end"
         android:gravity="end|center_vertical"
+        android:maxLines="6"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@id/tvName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.4"
         app:layout_constraintVertical_chainStyle="packed"
-        tools:text="나는 생각한다 고로 존재한다." />
+        tools:text="나는 생각한다 고로 나는 존재한다." />
 
     <TextView
         android:id="@+id/tvName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:ellipsize="end"
         android:gravity="end"
+        android:maxLines="1"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/tvQuote"
         app:layout_constraintStart_toStartOf="@id/tvQuote"
